設計書の修正

--- a/docs/設計書.md
+++ b/docs/設計書.md
@@ -2,7 +2,7 @@
 
 ## 1. 概要
 
-本設計書は、Next.js（App Router）を使用して構築するポートフォリオサイトの設計をまとめたものである。サイトは日本語を中心とし、落ち着いた男性的なデザインを採用する。利用技術は Next.js、TypeScript、Tailwind CSS、shadcn/ui を基盤とする。
+本設計書は、Next.js（App Router）を使用して構築するポートフォリオサイトの設計をまとめたものである。サイトは日本語を中心とし、落ち着いた男性的なデザインを採用する。利用技術は Next.js、TypeScript、Tailwind CSS を基盤とする。
 
 ---
 
@@ -33,7 +33,7 @@
 
 ## 5. サイト構成
 
-```
+```txt
 src/
  └ app/
      ├ layout.tsx
